--- a/src/mcp/sports-lab/package.json
+++ b/src/mcp/sports-lab/package.json
@@ -10,7 +10,11 @@
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js"
   },
-  "keywords": ["mcp", "football", "predictions"],
+  "keywords": [
+    "mcp",
+    "football",
+    "predictions"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,6 +24,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.10",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
