--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,9 @@ httpx>=0.24.0
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 
+# Web Interface
+streamlit>=1.28.0
+
 # Optional: Notebook support
 jupyter>=1.0.0
 ipykernel>=6.0.0
